# hello_rtthread

./: .gitmodules  CMakeLists.txt  README.md
bsp/: .mxproject  CMakeLists.txt  STM32F401XX_FLASH.ld  gcc-arm-none-eabi.cmake  rtthread_test.ioc  startup_stm32f401xe.s
bsp/Core/Inc/: stm32f4xx_it.h
bsp/Core/Src/: gpio.c  main.c  stm32f4xx_it.c
bsp/cmake/: starm-clang.cmake
bsp/cmake/stm32cubemx/: CMakeLists.txt
src/: main.cpp  main.hpp
src/config/: board.c  rtconfig.h
